--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "^0.10.2"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "0.14.0-beta3"
   },
   "devDependencies": {
     "istanbul-coveralls": "^1.0.1",
